文字追加、配色

--- a/index.html
+++ b/index.html
@@ -3,13 +3,31 @@
 
 <head>
 <title>蓬莱人形</title>
+ <style>
+    html, body {
+      background-color: black;
+      color: white;
+    }
+    body {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 
 <body>
+<h1>みぞおち腹ぱん</h1>
+<h2>腹ぱん記録</h2>
 <ul>
+   <li><a href="./info1/index.html">2024/2以前</a></li>
+    <li>2024/2以降</li>
+    <li>行ったとこ</li>
   <li>吉弔八千慧</li>
-  <li>くろこまさき</li>
+  <li>驪駒早鬼</li>
 </ul>
+<h2>考察</h2>
+<p>蓬莱人形における洋館と廃洋館</p>
+<p>埴カスが来る前の畜生界</p>
 </body>
 
 </html>
