--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <h1>みぞおち腹ぱん</h1>
 <h2>腹ぱん記録</h2>
 <ul>
-   <li><a href="./info1/index.html">2024/2以前</a></li>
-    <li>2024/2以降</li>
+   <li><a href="./pages/index.html">2024/02末以前</a></li>
+    <li>2024/02末以降</li>
     <li>行ったとこ</li>
   <li>吉弔八千慧</li>
   <li>驪駒早鬼</li>
