ページ追加　初版入れようとおもったけどまずそう

--- a/index.html
+++ b/index.html
@@ -18,16 +18,22 @@
 <body>
 <h1>みぞおち腹ぱん</h1>
 <h2>腹ぱん記録</h2>
-<ul>
+<ol>
    <li><a href="./pages/index.html">2024/02末以前</a></li>
     <li>2024/02末以降</li>
     <li>行ったとこ</li>
   <li>吉弔八千慧</li>
   <li>驪駒早鬼</li>
-</ul>
+</ol>
 <h2>考察</h2>
-<p>蓬莱人形における洋館と廃洋館</p>
-<p>埴カスが来る前の畜生界</p>
+<ul>
+<li>蓬莱人形における洋館と廃洋館</li>
+<li>埴カスが来る前の畜生界</li>
+</ul>
+<h2>情報</h2>
+<ul>
+<li><a href="./syohan/index.html" style="color:red">蓬莱人形初版の文章</a></li>
+</ul>
 </body>
 
 </html>
