ページ名と用途変更

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </ul>
 <h2>情報</h2>
 <ul>
-<li><a href="./syohan/index.html" style="color:red">蓬莱人形初版の文章</a></li>
+<li><a href="./syohan/index.html" style="color:red">原作の吉弔八千慧</a></li>
 </ul>
 </body>
 
