--- a/syohan/index.html
+++ b/syohan/index.html
@@ -16,6 +16,12 @@
 </head>
 
 <body>
-<h1>文章</h1>
-<p></p>
+<ol>
+   <li>東方鬼形獣</li>
+<p>あ</p>
+    <li>東方獣王園</li>
+<p>あ</p>
+    <li>外來韋編</li>
+<p>あ</p>
+</ol>
 </body>
