--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     <li>2024/02末以降</li>
     <li>行ったとこ</li>
 </ol>
+<h2>描いた絵</h2>
+<ul>
+<li>イラスト　落書き</li>
+<li>同人誌</li>
+</ul>
+<h2>手書き劇場</h2>
+<ul>
+<li>妄想譚(黒歴史)</li>
+<li>東国(絶賛製作途中)</li>
+</ul>
 <h2>考察</h2>
 <ul>
 <li>蓬莱人形における洋館と廃洋館</li>
