ページリンク追加

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <h2>腹ぱん記録</h2>
 <ol>
    <li><a href="./pages/index.html">2024/02末以前</a></li>
-    <li>2024/02末以降</li>
-    <li>行ったとこ</li>
+    <li><a href="./pages1/index.html">2024/02末以降</a></li>
+    <li><a href="./pages2/index.html">行ったとこ</a></li>
 </ol>
 <h2>描いた絵</h2>
 <ul>
